--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -53,7 +53,7 @@
           <a class="nav-link" routerLink="/developer/mentors">Mentor</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/developer/hr">HR</a>
+          <a class="nav-link" routerLink="/developer/hrs">HR</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/developer/Quizzes">Quizzes</a>
