--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -5,7 +5,7 @@
     </div>
     
 </div> -->
-<div  class="body d-flex justify-content-center align-items-center">
+<!-- <div  class="body d-flex justify-content-center align-items-center">
 
     <div class="holder">
         <div class="circle"></div>
@@ -25,4 +25,17 @@
         <div class="circle"></div>
         <div class="circle"></div>
     </div>
-</div>
+</div> -->
+<!-- logo2 -->
+<!-- <div class="container">
+    <div class="row">
+      <div class="col-md-offset-5 col-md-4">
+        <span class="icon logo">
+          <span class="loader"></span>
+        </span>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- <span class="loader"></span> -->
+  <!-- <img src="logoused.jpg"> -->
