--- a/src/app/modules/developer/Components/hr-card/hr-card.component.html
+++ b/src/app/modules/developer/Components/hr-card/hr-card.component.html
@@ -1,35 +1,101 @@
-<div class="card-client h-100">
-  <div class="user-picture">
-    <img [src]="hr.imageurl">
+<div class="card-client  row g-0">
+  <!-- <div class="user-picture col-2 mt-5">
+    <img src="http://localhost:5164/{{hr.Image}}"  style="width: 100%; height: 100%; border-radius: 10px;">
+  </div> -->
+  <div class="col-3 mt-3">
+    <a [routerLink]="['/hrs',HR.ID]">
+    <img src="http://localhost:5164/{{HR.Image}}" style="width: 100%; height: 100%; border-radius: 10px;cursor: pointer;"
+     onerror="this.onerror=null; this.src='http://localhost:5164/profile_images/Default1.png';">
+    </a>
   </div>
-  <h2 class="name-client"> {{hr.name}}</h2>
-  <p class="title-client"> Role:  {{hr.title}}</p>
-  <p class="category-client"> Department:  {{hr.category}}</p>
-  <p class="category-client"> Rate: <app-rate [value]="hr.rate"></app-rate></p>
-  <p class="price-client">Session Price:  ${{ hr.currentprice}}</p>
-  <br>
-  <button type="button" class="btn btn-dark" [routerLink]="['/hr', hr.id]" routerLinkActive="active">
-    <i class="fas fa-user"></i> View Profile
-  </button>
 
-  <div class="social-media">
-      <a href="#">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-        </svg>
+  <div class="row  col-9 m-0 client" style="text-align: start;">
+    <div class="d-flex col-12 justify-content-between align-items-center">
+      <div class="me-0 ms-0 mb-1">
+        <h2 class="name-client fw-bold mb-0 pb-0 mt-0 pt-0 " style="font-size: x-large; height: 35px; ">
+          <span>{{HR.FirstName}}</span>&nbsp;<span>{{HR.LastName}}</span>
+        </h2>
+        <p class="title-client fw-light mt-2 pt-0"> {{HR.Title}}</p>
+        <!-- <div class="hidden">{{HR.ID}}</div> -->
+      </div>
+      <div class="social-media mt-0 pt-0 col-3 mb-0 ps-5 ps-sm-2 text-sm-center custom-center ps-1" style="padding-right: 40px; padding-bottom: 20px;">
+        @if(HR.SocialAccounts.length>0){
+
+
+        @for (user of HR.SocialAccounts; track user.id; let index = $index) {
+        @if(HR.SocialAccounts[index].SocialName==3){
+        <!-- <a href="http://localhost:5164/{{HR.SocialAccounts[index].SocialLink}}"> -->
+        <a href="{{HR.SocialAccounts[index].SocialLink}}" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+            <path
+              d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+          </svg>
           <span class="tooltip-social">GitHub</span>
-      </a>
-      <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-              <path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path>
+        </a>
+        }
+        @if(HR.SocialAccounts[index].SocialName==1){
+        <!-- <a href="http://localhost:5164/{{HR.SocialAccounts[index].SocialLink}}"> -->
+        <a href="{{HR.SocialAccounts[index].SocialLink}}" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512">
+            <path
+              d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z">
+            </path>
           </svg>
           <span class="tooltip-social">Facebook</span>
-      </a>
-      <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-              <path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path>
+        </a>
+        }
+        @if(HR.SocialAccounts[index].SocialName==2){
+
+        <!-- <a href="http://localhost:5164/{{HR.SocialAccounts[index].SocialLink}}"> -->
+        <a href="{{HR.SocialAccounts[index].SocialLink}}" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 448 512">
+            <path
+              d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
+            </path>
           </svg>
           <span class="tooltip-social">LinkedIn</span>
-      </a>
+        </a>
+        }
+        }
+        }
+
+      </div>
+      <!-- <div class="" style="text-align: end;">
+        <button type="button" class="btn btn-dark " style=" width: fit-content; height: 35px;"
+          [routerLink]="['/HRs',HR.ID]" routerLinkActive="active">
+          <i class="fas fa-user"></i> View Profile
+        </button>
+      </div> -->
+    </div>
+    <div class="row mb-1 mt-1">
+      <div class="HR-skills col-12 mb-0 mt-2" style="height: 30px;">
+        <div *ngFor="let skill of HR.Skills.slice(0, 5)" class="skill-circle">
+          {{ skill }}
+        </div>
+      </div>
+      <div class=" col-12 d-flex mt-0">
+
+        <p class="category-client mt-3 col-2 col-sm-3 ms-0"> {{HR.YearsOfExperience}}<span style="font-size: small;"> yrs
+            Exp</span></p>
+
+@if(HR.AverageRate!=0){
+
+
+        <p class="category-client  col-2 mt-3"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+            fill="#ffc107" class="bi bi-star-fill" viewBox="0 0 16 16">
+            <path
+              d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+          </svg> {{HR.AverageRate}}</p>
+        }@else if(HR.AverageRate==0){
+          <p class="category-client  col-2 mt-3">  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-star" viewBox="0 0 16 16">
+            <path
+                d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z" />
+        </svg> {{HR.AverageRate}}</p>
+        }
+        <p class="price-client mt-3 col-4 col-sm-5"><span style="font-size: medium;">E£</span>{{ HR.Price}} <span style="font-size: small;">/ Session</span></p>
+        
+        
+      </div>
+    </div>
   </div>
 </div>
-
