--- a/src/app/modules/developer/Components/hr-list/hr-list.component.css
+++ b/src/app/modules/developer/Components/hr-list/hr-list.component.css
@@ -123,14 +123,46 @@
 }
 
 .btn-primary-search {
+  /* background-color: #415bcf;
+   */
+   background-color:#ffffff;
+   color: #1c4980;
+  border-color: #415bcf;
+  width: 250px;
+  height: 50px;
+  /* color: white; */
+  text-align: center !important;
+  /* text-align: center; */
+  /* justify-content: center; */
+  /* display: flex; */
+  /* margin-left: 530px !important; */
+}
+.btn-primary-search:hover {
   background-color: #415bcf;
+  
+   /* background-color:#ffffff; */
+   /* color: #1c4980; */
   border-color: #415bcf;
   width: 250px;
   height: 50px;
   color: white;
   text-align: center;
+  /* margin-left: 1000px !important; */
+}
+.btn-next{
+  background-color:#ffffff;
+  color: #1c4980;
+ border-color: #415bcf;
+ width: 150px;
+height: 40px;
 }
 
+.btn-next:hover{
+  background-color: #415bcf;
+  border-color: #415bcf;
+  
+  color: white;
+}
 .form-check-inline .form-check-input[type="radio"] {
   display: none;
 }
@@ -145,8 +177,32 @@
   transform: scale(1.2);
 }
 .star-rating {
+  padding-right: 55px;
+  /* padding-top: 30px; */
   direction: rtl;
   display: inline-flex;
+  margin-left: 0px !important;
+}
+@media (max-width: 1200px) {
+  .star-rating {
+  /* padding-left:1%; */
+  padding-right: 10px;
+  
+  padding-bottom: 5px;
+    direction: rtl;
+    display: inline-flex;
+  }
+  
+}
+@media (max-width: 770px) {
+  .star-rating {
+  padding-left: 1%;
+  /* padding-right: 0px; */
+  /* padding-top: 30px; */
+  padding-bottom: 40px;
+    direction: rtl;
+    display: inline-flex;
+  }
 }
 
 .star-rating input[type="radio"] {
@@ -158,35 +214,43 @@
   font-size: 2em;
   padding: 0 0.1em;
   cursor: pointer;
-  border: 2px solid rgb(144, 141, 141); /* Border for unselected stars */
+  /* border: 2px solid rgb(144, 141, 141);  */
+  
+  /* Border for unselected stars */
       transition: background-color 0.2s, border-color 0.2s, fill 0.2s;
       display: inline-flex;
       align-items: center;
       justify-content: center;
 }
 
+
 .star-rating label:hover,
 .star-rating label:hover ~ label,
 .star-rating input[type="radio"]:checked ~ label {
-  color: yellow;
+  color: #ffc107;
 }
 
 .star-rating label:hover svg,
 .star-rating label:hover ~ label svg,
 .star-rating input[type="radio"]:checked ~ label svg {
-  fill: yellow;
+  fill: #ffc107;
+}
+.star-rating label svg,.star-rating label ~ label svg,.star-rating input[type="radio"] ~ label svg{
+  fill: gray;
 }
 
 /* Container for the slider */
 .slider-container {
   position: relative;
-  width: 100%;
-  margin-top: 20px; /* Adjust spacing if needed */
+  width: 35% !important;
+  margin-top: 10px; /* Adjust spacing if needed */
+  /* margin-left: 700px !important; */
+  margin-right: 200px !important;
 }
 
 /* Base styling for the range input */
 input[type="range"] {
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
   width: 100%;
   background: transparent;
   position: absolute;
@@ -205,7 +269,7 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
   position: relative;
   z-index: 2;
-  box-shadow: 0 0 0 2px #ddd; /* Add border to thumb */
+  box-shadow: 0 0 0 2px #ddd; 
 }
 
 /* Firefox slider thumb styling */
@@ -304,4 +368,120 @@ input[type="range"]::-ms-track {
   position: relative;
 }
 
+ /* .cardd{
+  width: 
+  500% !important;
+  height: 300px;
+}  */
+.client{
+ justify-self: start;
+ margin-right: 400px !important;
+}
+.small-slider {
+  width: 50%; /* It will take 50% of its parent container's width */
+  max-width: 200px; /* You can limit the maximum width */
+}
 
+/* @media (max-width: 900px) {
+  .small-slider {
+    width: 50%; 
+  }
+} */
+.big-slider {
+  width: 100%; /* It will take 50% of its parent container's width */
+  max-width: 300px; /* You can limit the maximum width */
+}
+
+@media (max-width: 600px) {
+  .big-slider {
+    width: 100%; /* Full width on smaller screens */
+  }
+}
+.d-none{
+  display: none !important;
+}
+@media (min-width: 768px ) and (max-width: 990px ) {
+ .d-none {
+  display: block !important;
+ }
+ 
+}
+@media (min-width:576px)and (max-width: 769px ) {
+  .d-none {
+   display: block !important;
+  }
+  
+ }
+ @media (max-width:576px) {
+  .d-none {
+   display: block !important;
+  }
+  
+ }
+
+
+ .d-block{
+  display: block !important;
+}
+@media (min-width: 768px ) and (max-width: 990px ) {
+ .d-block {
+  display: none !important;
+ }
+ 
+}
+@media (min-width:576px)and (max-width: 769px ) {
+  .d-block {
+   display: none !important;
+  }
+  
+ }
+ @media (max-width:576px) {
+  .d-block {
+   display: none !important;
+  }
+  
+ }
+ .gap-lg-1{
+  gap: 10px !important;
+ }
+  .custom-col{
+    width: 70% !important; /* Customize the width */
+  padding: 10px;
+  }
+.marginform{
+  margin-top: 40px;
+}
+
+@media (min-width:1000px) and (max-width:1115px) {
+  
+}
+@media (max-width:990px) {
+  .custom-col{
+    width: 100% !important; /* Customize the width */
+  padding: 10px;
+  }
+}
+@media (max-width:770px) {
+  .custom-marg{
+    margin-left: 32% !important;
+  }
+ 
+}
+/* @media (max-width:765px) {
+  .container{
+    margin-left: 2% !important;
+    margin-right: 2% !important;
+  }
+ 
+} */
+@media (min-width: 576px) and (max-width:991px){
+  .container, .container-sm {
+      max-width: 590px !important;
+  }
+  
+}
+/* @media (max-width:990px) and (min-width:770px) {
+  .custom-marg{
+    margin-left: 12% !important;
+  }
+} */
