--- a/src/app/modules/developer/Components/hr-list/hr-list.component.html
+++ b/src/app/modules/developer/Components/hr-list/hr-list.component.html
@@ -1,134 +1,224 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
-<br>
-<br>
+
 <div class="container mt-5">
-  <h3 class="display-4 fw-bold text-center" style="
-      font-family: Edu AU VIC WA NT Hand, cursive;
-      font-optical-sizing: auto;
-      font-style: normal;
-">Our HR Specialist</h3>
+  <h3 class="display-4 fw-bold text-center"
+    style="font-family: Edu AU VIC WA NT Hand, cursive; font-optical-sizing: auto; font-style: normal; margin-top: 100px;">
+    Our HR
+  </h3>
+
   <br>
+
   <!-- Filters and Cards Section -->
-  <div class="row mt-4">
-    <!-- Filters Section -->
-     <br>
-     <br>
-     <br>
-    <div class="col-md-3">
-      <form class="form-inline d-flex flex-column align-items-start">
+  <div class="row mt-4 gap-lg-1 justify-content-between">
+
+    <!-- Small Screen -->
+    <div class="  d-none">
+      <form class="form-inline row  ">
+
+        <!-- Search Button -->
+
+
         <!-- HR Name Input -->
-        <h4 class="mb-3">HR-Name</h4>
+       
+
+        <!-- HR Role Input -->
+
+
+        <!-- Rate Filter -->
+        <div class="">
+          <div class=" d-flex mb-3">
+
+            <!-- <h4 class="mb-3 ">Rate</h4> -->
+            <div class="rate-filter mb-3 star-rating  ">
+              <input type="radio" name="rate" id="rate5" value="5" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate4" value="4" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate4">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate3" value="3" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate2" value="2" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate1" value="1" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+              
+            </div>
+            <div class="form-group mb-3 col-4 custom-marg"  style="margin-left: 32.5%;">
+              <input class="form-control" placeholder="HR Name" type="text" [(ngModel)]="name" name="name"
+                (keydown.enter)="filter()">
+            </div>
+          </div>
+          <div style="display: flex;">
+            <!-- <h4 class="mb-3 me-2">Price</h4> -->
+            <ngx-slider *ngIf="isBrowser" class="small-slider" [(value)]="priceMin" [(highValue)]="priceMax"
+              [options]="options" (valueChange)="onPriceMinChange($event)" (highValueChange)="onPriceMaxChange($event)"
+              (keydown.enter)="filter()">
+            </ngx-slider>
+            <div class="form-group mb-3 col-4 " style="margin-left: 30%;">
+              <input class="form-control" placeholder="HR Title" type="text" [(ngModel)]="title" name="title"
+                (keydown.enter)="filter()">
+            </div>
+          </div>
+
+          <!-- <ngx-slider *ngIf="isBrowser" class="small-slider" [(value)]="priceMin" [(highValue)]="priceMax" [options]="options" ></ngx-slider> -->
+
+          
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+          <button type="button" (click)="filter()"
+            class="btn btn-primary-search mb-4 justify-content-center text-center mt-4">
+            <i class="fas fa-search"></i> Search
+          </button>
+        </div>
+
+      </form>
+      <br>
+      <hr>
+    </div>
+
+    <!-- big screen  -->
+    <div class=" col-lg-3 marginform ">
+      <form class="form-inline row d-block  ">
+
+        <!-- Search Button -->
+
+
+        <!-- HR Name Input -->
         <div class="form-group mb-3">
-          <input class="form-control" placeholder="HR Name" type="text">
+          <input class="form-control" placeholder="HR Name" type="text" [(ngModel)]="name" name="name"
+            (keydown.enter)="filter()">
         </div>
 
         <!-- HR Role Input -->
-        <h4 class="mb-3">HR-Role</h4>
         <div class="form-group mb-3">
-          <input class="form-control" placeholder="HR Role" type="text">
-        </div>
-
-        <!-- Department Dropdown -->
-        <h4 class="mb-3">Department</h4>
-        <div class="form-group mb-3">
-          <select class="form-select" style="border: 2px solid #1c4980;">
-            <option selected>Select Department</option>
-            <option value="HR">HR</option>
-            <option value="Finance">Finance</option>
-            <option value="IT">IT</option>
-            <option value="Marketing">Marketing</option>
-            <!-- Add more options as needed -->
-          </select>
+          <input class="form-control" placeholder="HR Title" type="text" [(ngModel)]="title" name="title"
+            (keydown.enter)="filter()">
         </div>
 
         <!-- Rate Filter -->
-        <h4 class="mb-3">Rate</h4>
-        <div class="rate-filter mb-3 star-rating">
-          <input type="radio" name="rate" id="rate5" value="5">
-          <label for="rate5">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-          </label>
-          <input type="radio" name="rate" id="rate4" value="4">
-          <label for="rate4">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-          </label>
-          <input type="radio" name="rate" id="rate3" value="3">
-          <label for="rate3">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-          </label>
-          <input type="radio" name="rate" id="rate2" value="2">
-          <label for="rate2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-          </label>
-          <input type="radio" name="rate" id="rate1" value="1">
-          <label for="rate1">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-star-fill"
-              viewBox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-            </svg>
-          </label>
-        </div>
+        <div class="row">
+          <div class="row mb-2">
+            <!-- <h4 class="mb-3 col-3">Rate</h4> -->
+            <div class="rate-filter mb-3 star-rating  ms-5">
+              <input type="radio" name="rate" id="rate5" value="5" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate5">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
 
-        <!-- Price Range -->
-        <h4 class="mb-3">Price</h4>
-        <div class="slider-container mb-3" style="margin-right: 300px;">
-          <input id="priceMin" type="range" min="100" max="1000" [(ngModel)]="priceMin" (input)="updateRange()"
-            step="10">
-          <input id="priceMax" type="range" min="100" max="1000" [(ngModel)]="priceMax" (input)="updateRange()"
-            step="10">
-          <div class="track">
-            <div class="range-fill"></div>
+              <input type="radio" name="rate" id="rate4" value="4" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate4">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate3" value="3" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate2" value="2" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+
+              <input type="radio" name="rate" id="rate1" value="1" [(ngModel)]="rate" (change)="filter()">
+              <label for="rate1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star-fill"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+              </label>
+            </div>
           </div>
-          <div class="tooltip" id="priceMinTooltip">{{ priceMin }}</div>
-          <div class="tooltip" id="priceMaxTooltip">{{ priceMax }}</div>
+
+
+
+          <!-- <ngx-slider *ngIf="isBrowser" class="small-slider" [(value)]="priceMin" [(highValue)]="priceMax" [options]="options" ></ngx-slider> -->
+
+        </div>
+        <!-- <h4 class="mb-3 col-3">Price</h4> -->
+        <div>
+          <ngx-slider *ngIf="isBrowser" class="big-slider " [(value)]="priceMin" [(highValue)]="priceMax"
+            [options]="options" (valueChange)="onPriceMinChange($event)" (highValueChange)="onPriceMaxChange($event)"
+            (keydown.enter)="filter()">
+          </ngx-slider>
+        </div>
+        <div class="col-12 d-flex justify-content-center" style="margin-top: 40px;">
+          <button type="button" (click)="filter()"
+            class="btn btn-primary-search mb-4 justify-content-center text-center">
+            <i class="fas fa-search"></i> Search
+          </button>
         </div>
 
-        <br>
-
-        <!-- Search Button -->
-        <button type="button" class="btn btn-primary-search">
-          <i class="fas fa-search"></i> Search
-        </button>
       </form>
     </div>
-
-
-
     <!-- Cards Section -->
-    <div class="col-md-9">
-      <!-- Button Container -->
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <button type="button" class="btn btn-primary" (click)="prevPage()">Prev</button>
-
-        <!-- Counter -->
-        <div class="counter">
-          <span>{{ currentPage }} / {{ totalPages }}</span>
-        </div>
-
-        <button type="button" class="btn btn-primary" (click)="nextPage()">Next</button>
-      </div>
-
+    <div class="col-md-12  custom-col  ">
       <!-- Cards Container -->
-      <div class="row mt-4 justify-content-center">
-        <div *ngFor="let humanresourse of Hr; let index = index" class="col-12 col-md-6 col-lg-4 mb-4 d-flex justify-content-center">
-          <app-hr-card [hr]="humanresourse"></app-hr-card>
+      <div class="row mt-4">
+        <div
+          *ngFor="let HR of HRs | paginate: { itemsPerPage: pageSize, currentPage: p, totalItems: totalItems }"
+          class="col-12 col-md-12 col-lg-12 mb-4 cardd">
+          <app-hr-card [HR]="HR"></app-hr-card>
+
         </div>
+
+        <!-- Pagination Controls -->
+        <pagination-controls class="text-center" (pageChange)="OnpageChange($event)"></pagination-controls>
       </div>
     </div>
 
   </div>
+
 </div>
