--- a/src/app/shared/components/spinner/spinner.component.css
+++ b/src/app/shared/components/spinner/spinner.component.css
@@ -11,7 +11,7 @@
     z-index: 100;
     pointer-events:none;
 } */
-
+/* 
 body {
     overflow: hidden;
 }
@@ -525,4 +525,128 @@ body {
     100% {
         transform: translateX(-50%) rotate(-5760deg);
     }
+} */
+/* logo 2  */
+/* .logo {
+    background-image: url('../../../../assets/logoused.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-size: 120px;
 }
+
+
+.icon {
+    border-radius: 100%;
+    width: 165px;
+    height: 165px;
+    display: inline-block;
+    margin-bottom: 0 auto 25px;
+    position: relative;
+    z-index: -1;
+}
+
+.loader {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 4px solid transparent;
+    border-top-color: #1b067a;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+    z-index: 5;
+}
+
+.loader:before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    border-radius: 50%;
+    border: 4px solid transparent;
+    border-top-color: #091764;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
+}
+
+.loader:after {
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    right: 4px;
+    bottom: 4px;
+    border-radius: 50%;
+    border: 4px solid transparent;
+    border-top-color: #0f0114;
+    -webkit-animation: spin 3.5s linear infinite;
+    animation: spin 3.5s linear infinite;
+}
+
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg); }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg); }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@-webkit-keyframes slide {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg); }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg); } 
+} */
+.loader {
+    position: absolute;
+    top:220px;
+    left:600px;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 20px -5px rgba(255, 255, 255, 0.5),
+            inset 0 -40px 40px -20px rgba(255, 255, 255, 0.5);
+    background: linear-gradient(#082b53 120px, transparent 0) no-repeat;
+    background-position: 0px 120px;
+    animation: fillLq 3s linear infinite alternate;
+  }
+  .loader:before {
+    position: absolute;
+    content: '';
+    width: 40%;
+    height: 25%;
+    top: 20px;
+    left: 10px;
+    background: rgba(255,255,255,0.1);
+    border-radius: 50%;
+    transform: rotate(-45deg);
+  }
+
+  @keyframes fillLq {
+    0% , 10% { background-position: 0 120px}
+    90% , 100% { background-position: 0 0}
+  }
