--- a/src/app/modules/developer/Components/query-answer/query-answer.component.html
+++ b/src/app/modules/developer/Components/query-answer/query-answer.component.html
@@ -47,6 +47,7 @@
                     </div>
                 </div>
                 }
+
                 <div class="card-header d-lg-flex justify-content-between align-items-center mt-4">
 
                     <div class="mb-3 mb-lg-0">
@@ -65,7 +66,9 @@
 
                             <div>
 
-                                @for(query of userQueries; track $index;  let index = $index){
+                                <!-- @for(query of userQueries; track $index; let index = $index){ -->
+
+                                @if(user){
                                 <div id="ps-0 ">
 
                                     <div class="answer pe-5 ps-2 pt-2 mb-3 ">
@@ -74,64 +77,118 @@
 
                                             <div class=" mb-0 mb-lg-0 mt-3 pb-1 gap-0 ps-3 text-muted">
 
-                                                <span class=" ">Answered On : </span>
-                                                <span class="mb-0 ">({{ query.DateTime | date: 'dd MMM yyyy'}})   at   {{ query.DateTime | date: 'hh:mm a' }}</span>
+                                                <span class=" ">Answered On :
+
+                                                </span>
+                                                <span class="mb-0 ">({{ userQueries.DateTime | date: 'dd MMM yyyy'}}) at
+                                                    {{
+                                                    userQueries.DateTime | date: 'hh:mm a' }}</span>
                                             </div>
 
                                             <div class="comment-actions">
 
-                                                <div class="mt-3 me-5 ">
-                                                    <p><strong class="ms-2"><img src="{{query.UserImageUrl}}"
+                                                <div class="mt-3 me-5 d-flex justify-content-between">
+                                                    <p><strong class="ms-2"><img src="{{userQueries.UserImageUrl}}"
                                                                 class="avatar-xl rounded-circle border border-4 border-white"
                                                                 style="height: 70px; size: 6px;" alt="avatar"> </strong>
-                                                        {{ query.Question }}
+                                                        {{ userQueries.Question }}
                                                     </p>
-
+                                                    @if(userQueries.File ){
+                                                        <a class="btn btn-outline-primary btn-sm ms-0 align-items-end justify-content-end"
+                                                            style="border-radius: 25px;"
+                                                            href="http://localhost:5164/{{userQueries.File}}"
+                                                            download="true">Download
+                                                            File</a>
+                                                        }
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
                                 }
-                                @for(query of userQueries; track $index;  let index = $index){
-                                @if(mentor.FirstName == query.FirstName){
-                              
+                                <!-- } -->
+                                <!-- @for(query of userQueries.QueryAnswers ; track $index; let index = $index){
+                                  -->
+                                @for(answer of userQueries.QueryAnswers ; track $index; let index = $index){
+
+                                <!-- @if(mentor.FirstName == query.FirstName){ -->
+                                @if(answer.IsDeveloper){
                                 <div id="ps-0">
                                     <div class="answer pe-5 ps-2 pt-2 text-muted">
                                         <div class="comment-content">
                                             <div class=" mb-0 mb-lg-0 mt-3 pb-1 gap-0 ps-3">
                                                 <span class=" ">Answered On : </span>
                                                 <!-- <span class="mb-0 ">{{query.DateTime}}</span> -->
-                                                <span class="mb-0  ">({{ query.DateTime | date: 'dd MMM yyyy'}})   at   {{ query.DateTime | date: 'hh:mm a' }}</span>
+                                                <span class="mb-0  ">({{ answer.DateTime | date: 'dd MMM yyyy'}}) at {{
+                                                    answer.DateTime | date: 'hh:mm a' }}</span>
 
                                             </div>
 
 
                                             <div class="comment-actions">
 
-                                                <div class="mt-3 me-5 ms-2">
-                                                    <p class="ms-2"><strong class=""><img src="{{mentor.Image}}"
+                                                <div class="mt-3 me-5 ms-2 d-flex justify-content-between">
+                                                    <p class="ms-2"><strong class=""><img src="{{user.Image}}"
                                                                 class="avatar-xl rounded-circle border border-4 border-white"
                                                                 style="height: 70px; size: 6px;" alt="avatar"></strong>
-                                                        {{query.QueryAnswers[index].Answer}}</p>
-
-                                                    <a class="btn btn-outline-primary btn-sm ms-0  "
+                                                        {{answer.Answer}}</p>
+                                                    @if(answer.FilePath ){
+                                                    <a class="btn btn-outline-primary btn-sm ms-0 align-items-end justify-content-end"
                                                         style="border-radius: 25px;"
-                                                        href="http://localhost:5164/{{query.QueryAnswers[index].File}}"
+                                                        href="http://localhost:5164/{{answer.FilePath}}"
                                                         download="true">Download
                                                         File</a>
-
+                                                    }
                                                 </div>
                                             </div>
-                                            
+
 
                                         </div>
 
                                     </div>
-                                
+
                                 </div>
-                            }
-                            }
+                                }
+                                @if(!answer.IsDeveloper){
+                                <div id="ps-0 ">
+                                    <div class="answer pe-5 ps-2 pt-2 text-muted">
+                                        <div class="comment-content">
+                                            <div class=" mb-0 mb-lg-0 mt-3 pb-1 gap-0 ps-3">
+                                                <span class=" ">Answered On : </span>
+                                                <!-- <span class="mb-0 ">{{query.DateTime}}</span> -->
+                                                <span class="mb-0  ">({{ answer.DateTime | date: 'dd MMM yyyy'}}) at {{
+                                                    answer.DateTime | date: 'hh:mm a' }}</span>
+
+                                            </div>
+
+
+                                            <div class="comment-actions ">
+
+                                                <div class="mt-3 me-5 ms-2 d-flex">
+                                                    <p class="ms-2"><strong class=""><img src="{{mentor.Image}}"
+                                                                class="avatar-xl rounded-circle border border-4 border-white"
+                                                                style="height: 70px; size: 6px;" alt="avatar"></strong>
+                                                        {{answer.Answer}}</p>
+                                                    @if(answer.FilePath){
+                                                    <a class="btn btn-outline-primary btn-sm ms-0  "
+                                                        style="border-radius: 25px;"
+                                                        href="http://localhost:5164/{{answer.FilePath}}"
+                                                        download="true">Download
+                                                        File</a>
+                                                    }
+                                                </div>
+                                            </div>
+
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                                }
+                                }
+                                <!-- } -->
                             </div>
 
                             <!-- } -->
@@ -146,7 +203,7 @@
                                     <!-- <textarea class="form-control mb-3 p-4" formControlName="Question"
                                         id="validationTextarea" placeholder="Query" required></textarea> -->
 
-                                        <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query"
+                                    <textarea class="form-control mb-3 p-4" id="validationTextarea" placeholder="Query"
                                         formControlName="Question" required></textarea>
 
                                     <h5 class=" mt-3">Attach file</h5>
@@ -164,13 +221,15 @@
 
 
                                     <div class="upload-container border p-3 text-center">
-                                        <input type="file" id="file-upload" (change)="onFileSelected($event)" class="upload-input">
+                                        <input type="file" id="file-upload" (change)="onFileSelected($event)"
+                                            class="upload-input">
                                         <label for="file-upload" class="upload-label">
-                                          <i class="fa-solid fa-cloud-arrow-up"></i>
-                                          <p class="upload-text">Click here to upload File</p>
+                                            <i class="fa-solid fa-cloud-arrow-up"></i>
+                                            <p class="upload-text">Click here to upload File</p>
                                         </label>
-                                      </div>
-                                      <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2" type="submit">Send</button>
+                                    </div>
+                                    <button class="btn btn-primary btn-block mt-2 ps-5 pe-5 mt-2"
+                                        type="submit">Send</button>
                                     <!-- <a class="mb-3 p-2 px-5 mt-3 btn btn-outline-primary btn-sm ms-0"
                                         type="submit">Send</a> -->
                                 </form>
