--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -22,7 +22,7 @@
         <h2 class=" m-0 p-0">Your Role</h2>
         <button type="button" (click)="setRole('Developer')">Developer</button>
         <button type="button" (click)="setRole('HR')"> HR</button>
-        <button type="button" (click)="setRole('Monitor')">Monitor</button>
+        <button type="button" (click)="setRole('Mentor')">Monitor</button>
       </div>
       <div class="form-group">
         <label for="email">Email address</label>
