--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -22,7 +22,7 @@
         <h2 class=" m-0 p-0">Your Role</h2>
         <button type="button" (click)="setRole('Developer')">Developer</button>
         <button type="button" (click)="setRole('HR')"> HR</button>
-        <button type="button" (click)="setRole('Monitor')">Monitor</button>
+        <button type="button" (click)="setRole('Mentor')">Mentor</button>
       </div>
       <div class="form-group">
         <label for="email">Email address</label>
@@ -145,7 +145,7 @@
         <h2 class=" m-0 p-0">Your Role</h2>
         <button type="button" (click)="setRole('Developer')">Developer</button>
         <button type="button" (click)="setRole('HR')"> HR</button>
-        <button type="button" (click)="setRole('Monitor')">Monitor</button>
+        <button type="button" (click)="setRole('Mentor')">Mentor</button>
      </form>
 
       <button type="submit" [disabled]="form.invalid" class="form-group mt-4 ps-4 btn btn-primary btn-block ms-4 text-center justify-content-center">Sign Up</button>
