--- a/src/app/modules/developer/Components/home/home.component.css
+++ b/src/app/modules/developer/Components/home/home.component.css
@@ -193,3 +193,455 @@ app-developercard {
 .mb-8 {
   margin-bottom: 3.5rem!important
 }
+.btn-custom {
+  background-color: #415bcf;; /* Black background */
+  color: #fff; /* White text color */
+  font-size: 1.25rem; /* Increase font size */
+  padding: 0.75rem 1.5rem; /* Increase width and height */
+  border-radius: 0.25rem; /* Optional: rounded corners */
+  border: none; /* Remove border if desired */
+  text-decoration: none; /* Remove underline */
+  display: inline-block; /* Ensure the button respects padding */
+  width: 100%;
+}
+.btn-success {
+  background-color: #415bcf; /* Red background */
+  color: #fff; /* White text color */
+  font-size: 1.25rem; /* Increase font size */
+  padding: 0.75rem 1.5rem; /* Increase width and height */
+  border-radius: 0.25rem; /* Optional: rounded corners */
+  border: none; /* Remove border if desired */
+  text-decoration: none; /* Remove underline */
+  display: inline-block; /* Ensure the button respects padding */
+  width: 100%;
+}
+.text-reset{
+  font-size: 25px !important;
+  text-decoration: none !important;
+}
+
+/*** VARS ***/
+
+/* #c8c: #c8c; */
+/* lighten(#303f9f, 20%): lighten(#303f9f, 20%); */
+/* #c5cae9: #c5cae9; */
+
+
+
+/*** GENERAL STYLES ***/
+/* 
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+} */
+body{
+  font-family: 'Dosis', sans-serif;
+  background: #c5cae9;
+  text-align: center;
+}
+.clear{clear:both;}
+
+
+/*** CARD STLES ***/
+
+/* .cards-container{
+  width: 793px;
+  max-width: 100%;
+  margin: 2rem auto;
+}
+.card{
+  float: left;
+  margin: 3rem;
+} */
+
+.card-one{
+  position: relative;
+  width: 300px;
+  background: #fff;
+  box-shadow: 0 10px 7px -5px rgba(#000,.4);
+  
+  header{
+    position: relative;
+    /* width: 100%; */
+    height: 60px;
+    background-color: rgb(141, 136, 204);
+    &::before, &::after{
+      content: '';
+      position: absolute;
+      top: 0;bottom: 0;left: 0;right: 0;
+      background: inherit;
+    }
+    &::before{
+      -webkit-transform: skewY(-8deg);
+      -moz-transform: skewY(-8deg);
+      -ms-transform: skewY(-8deg);
+      -o-transform: skewY(-8deg);
+      transform: skewY(-8deg);
+      -webkit-transform-origin: 100% 100%;
+      -moz-transform-origin: 100% 100%;
+      -ms-transform-origin: 100% 100%;
+      -o-transform-origin: 100% 100%;
+      transform-origin: 100% 100%;
+    }
+    &::after{
+      -webkit-transform: skewY(8deg);
+      -moz-transform: skewY(8deg);
+      -ms-transform: skewY(8deg);
+      -o-transform: skewY(8deg);
+      transform: skewY(8deg);
+      -webkit-transform-origin: 0 100%;
+      -moz-transform-origin: 0 100%;
+      -ms-transform-origin: 0 100%;
+      -o-transform-origin: 0 100%;
+      transform-origin: 0 100%;
+    }
+    .avatar{
+      position: absolute;
+      left: 50%;
+      top: 30px;
+      margin-left: -50px;
+      z-index: 5;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      background: #ccc;
+      border:3px solid #fff;
+      img{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 100px;
+        height: auto;
+      }
+    }
+  }
+
+  h3{
+    position: relative;
+    margin: 80px 0 30px;
+    text-align: center;
+    &::after{
+      content: '';
+      position: absolute;
+      bottom: -15px;
+      left: 50%;
+      margin-left: -15px;
+      width: 30px;
+      height: 1px;
+      background: #000;
+    }
+  }
+  .desc{
+    padding: 0 1rem 2rem;
+    text-align: center;
+    line-height: 1.5;
+    color: #777;
+  }
+  .contacts{
+    width: 200px;
+    max-width: 100%;
+    margin: 0 auto 3rem;
+    a{
+      display: block;
+      width: 33.333333%;
+      /* float: left; */
+      text-align: center;
+      color: #c8c;
+      &:hover{
+        color: #333;
+        .fa{
+          &::before{
+            color: #fff;
+          }
+          &::after{
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+      .fa{
+        position: relative;
+        width: 40px;
+        height: 40px;
+        line-height: 39px;
+        overflow: hidden;
+        text-align: center;
+        font-size: 1.3em;
+        &:before{
+          position: relative;
+          z-index: 1;
+        }
+        &::after{
+          content: '';
+          position: absolute;
+          top: 50%; left: 50%;
+          width: 0; height: 0;
+          -webkit-transform: translate(-50%,-50%);
+          -moz-transform: translate(-50%,-50%);
+          -ms-transform: translate(-50%,-50%);
+          -o-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+          background: #c8c;
+          -webkit-transition: width .3s, height .3s;
+          -moz-transition: width .3s, height .3s;
+          -ms-transition: width .3s, height .3s;
+          -o-transition: width .3s, height .3s;
+          transition: width .3s, height .3s;
+        }
+      }
+      &:last-of-type .fa{line-height: 36px;}
+    }
+  }
+  
+  footer{
+    position: relative;
+    padding: 1rem;
+    background-color: lighten(#303f9f, 20%);
+    text-align: center;
+    a{
+      padding: 0 1rem;
+      color: #e2e2e2;
+      -webkit-transition: color .4s;
+      -moz-transition: color .4s;
+      -ms-transition: color .4s;
+      -o-transition: color .4s;
+      transition: color .4s;
+      &:hover{
+        color: #c8c;
+      }
+    }
+    &::before{
+      content: '';
+      position: absolute;
+      top: -27px;
+      left: 50%;
+      margin-left: -15px;
+      border: 15px solid transparent;
+      border-bottom-color: lighten(#303f9f, 20%);
+    }
+  }
+}
+
+.card-two{
+  /* position: relative; */
+  width: 300px;
+  background: #fff;
+  box-shadow: 0 10px 7px -5px rgba(#000,.4);
+  
+  header{
+    position: relative;
+    /* width: 100%; */
+    height: 60px;
+    background-color: #00376E;
+    &::after{
+      content: '';
+      position: absolute;
+      top: 0;bottom: 0;left: 0;right: 0;
+      background: inherit;
+    
+      -webkit-transform: skewY(8deg);
+      -moz-transform: skewY(8deg);
+      -ms-transform: skewY(8deg);
+      -o-transform: skewY(8deg);
+      transform: skewY(8deg);
+      -webkit-transform-origin: 0 100%;
+      -moz-transform-origin: 0 100%;
+      -ms-transform-origin: 0 100%;
+      -o-transform-origin: 0 100%;
+      transform-origin: 0 100%;
+    }
+    .avatar{
+      position: absolute;
+      left: 50%;
+      top: 30px;
+      margin-left: -50px;
+      z-index: 5;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      background: #ccc;
+      border:3px solid #fff;
+      img{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 100px;
+        height: auto;
+      }
+    }
+  }
+
+  h3{
+    position: relative;
+    margin: 80px 0 30px;
+    text-align: center;
+    &::after{
+      content: '';
+      position: absolute;
+      bottom: -15px;
+      left: 50%;
+      margin-left: -15px;
+      width: 30px;
+      height: 1px;
+      background: #000;
+    }
+  }
+  .desc{
+    padding: 0 1rem 2rem;
+    text-align: center;
+    line-height: 1.5;
+    color: #777;
+  }
+  .contacts{
+    width: 200px;
+    max-width: 100%;
+    margin: 0 auto 3.5rem;
+    a{
+      display: block;
+      width: 33.333333%;
+      /* float: left; */
+      text-align: center;
+      color: #c8c;
+      &:hover{
+        color: #333;
+        .fa{
+          &::before{
+            color: #fff;
+          }
+          &::after{
+            top: 0;
+          }
+        }
+      }
+      .fa{
+        position: relative;
+        width: 40px;
+        height: 40px;
+        line-height: 39px;
+        overflow: hidden;
+        text-align: center;
+        border: 2px solid #c8c;
+        border-radius: 50%;
+        &:before{
+          position: relative;
+          z-index: 1;
+        }
+        &::after{
+          content: '';
+          position: absolute;
+          top: -50px; left: 0;
+          width: 100%; height: 100%;
+          -webkit-transition: top .3s;
+          -moz-transition: top .3s;
+          -ms-transition: top .3s;
+          -o-transition: top .3s;
+          transition: top .3s;
+          background: #c8c;
+        }
+      }
+      &:last-of-type .fa{line-height: 36px;}
+    }
+  }
+  
+  footer{
+    position: relative;
+    height: 45px;
+    background-color: lighten(#303f9f, 20%);
+    text-align: center;
+    p{
+      position: absolute;
+      bottom: 0; left: 0;
+      width: 100%;
+      z-index: 1;
+      a{
+        padding: 0 1rem;
+        color: #e2e2e2;
+        -webkit-transition: color .4s;
+        -moz-transition: color .4s;
+        -ms-transition: color .4s;
+        -o-transition: color .4s;
+        transition: color .4s;
+        &:hover{
+          color: #c8c;
+        }
+      }
+    }
+    &::before{
+      z-index: 0;
+      content: '';
+      position: absolute;
+      top: 0px;bottom: 0;left: 0;right: 0;
+      background: inherit;
+    
+      -webkit-transform: skewY(8deg);
+      -moz-transform: skewY(8deg);
+      -ms-transform: skewY(8deg);
+      -o-transform: skewY(8deg);
+      transform: skewY(8deg);
+      -webkit-transform-origin: 100%;
+      -moz-transform-origin: 100%;
+      -ms-transform-origin: 100%;
+      -o-transform-origin: 100%;
+      transform-origin: 100%;
+    }
+  }
+}
+
+
+/*** RESPONSIVE ***/
+
+@media only screen and (max-width: 810px) {
+  .card {
+    /* float: none; */
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
+
+.btn-outline-primary {
+  --bs-btn-color: #00376E !important;
+  --bs-btn-border-color: #00376E !important;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #00376E !important;
+  --bs-btn-hover-border-color: #00376E !important;
+  --bs-btn-focus-shadow-rgb: 13, 110, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #00376E !important;
+  --bs-btn-active-border-color: #00376E !important;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #00376E !important;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #00376E !important;
+  --bs-gradient: none;
+}
+.cards-container {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  justify-content: center !important; /* Aligns cards horizontally */
+  gap: 2rem !important; /* Adds space between cards */
+  width: 793px !important;
+  max-width: 100% !important;
+  margin: 2rem auto;
+}
+
+.card {
+  flex: 0 0 300px; /* Ensures all cards have a fixed width */
+  background: #fff;
+  margin: 3rem;
+  box-shadow: 0 10px 7px -5px rgba(0, 0, 0, .4);
+}
