--- a/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.html
+++ b/src/app/modules/mentor/components/mentorlayout/mentorlayout.component.html
@@ -40,7 +40,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="col-lg-9 col-md-8 col-12 ps-5">
+    <div class="col-lg-9 col-md-9 col-12  custome-margin " >
       <router-outlet></router-outlet>
     </div>
   </div>
